--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <title>Document</title>
   </head>
   <body></body>
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </html>
